Fix background image visibility: make fade-in overlay transparent instead of solid color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3362,7 +3362,7 @@ input, select, textarea {
 			-webkit-transition-delay: 0.75s;
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
-			background: #1e252d;
+			background: transparent;
 			content: '';
 			display: block;
 			height: 100%;
